[gd_scene load_steps=21 format=1]

[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://images/GUI/border.png" type="Texture" id=3]
[ext_resource path="res://images/GUI/borderCenter.png" type="Texture" id=4]
[ext_resource path="res://images/GUI/grabberUp.png" type="Texture" id=5]
[ext_resource path="res://images/GUI/slider.png" type="Texture" id=6]
[ext_resource path="res://images/GUI/buttonOver.png" type="Texture" id=7]
[ext_resource path="res://images/GUI/buttonDown.png" type="Texture" id=8]
[ext_resource path="res://images/GUI/buttonUp.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=10]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[sub_resource type="Theme" id=11]

default_font = SubResource( 10 )

[sub_resource type="CanvasItemShader" id=12]

_code = {
"fragment": "uniform texture border;
uniform float border_width = 4.0;

//Pixels that lie within the border region need to come from the border
//texture.
if(UV.x < TEXTURE_PIXEL_SIZE.x * border_width || 
    UV.x > 1.0 - TEXTURE_PIXEL_SIZE.x * border_width ||
    UV.y > 1.0 - TEXTURE_PIXEL_SIZE.y * border_width ||
    UV.y < TEXTURE_PIXEL_SIZE.y * border_width)
{
    COLOR = tex(border, UV);
}
else
{
    //Make sure that we clip the corners of the inner part
    if(tex(border, UV).a < .2)
    {
        COLOR = color(0.0, 0.0, 0.0, 0.0);
    }
    else
    {
        COLOR = COLOR;
    }
}",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "VERTEX = VERTEX;",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=13]

shader/shader = SubResource( 12 )
shader/shading_mode = 0
shader_param/border = ExtResource( 3 )
shader_param/border_width = 8.0

[sub_resource type="StyleBoxTexture" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=16]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=19]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 9 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="SettingsMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 11 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]

material/material = SubResource( 13 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 80.0
margin/right = 820.0
margin/bottom = 520.0
custom_styles/panel = SubResource( 14 )
popup/exclusive = true

[node name="MusicLabel" type="Label" parent="PopupPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 40.0
margin/right = 105.0
margin/bottom = 65.0
text = "Music"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicSlider" type="HSlider" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 220.0
margin/top = 40.0
margin/right = 550.0
margin/bottom = 64.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 9 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="GUISoundsLabel" type="Label" parent="PopupPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 90.0
margin/right = 105.0
margin/bottom = 115.0
text = "GUI Sounds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GUISoundsSlider" type="HSlider" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 220.0
margin/top = 90.0
margin/right = 550.0
margin/bottom = 114.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 9 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SoundsLabel" type="Label" parent="PopupPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 140.0
margin/right = 167.0
margin/bottom = 165.0
text = "Sounds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundsSlider" type="HSlider" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 220.0
margin/top = 140.0
margin/right = 550.0
margin/bottom = 164.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 9 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="ViewDistanceLabel" type="Label" parent="PopupPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 190.0
margin/right = 196.0
margin/bottom = 215.0
text = "View Distance"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ViewDistanceSlider" type="HSlider" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 220.0
margin/top = 190.0
margin/right = 550.0
margin/bottom = 214.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 9 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="ShadowsButton" type="CheckButton" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 230.0
margin/right = 330.0
margin/bottom = 263.0
custom_styles/focus = SubResource( 15 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Shadows"
flat = false
align = 0

[node name="BackButton" type="Button" parent="PopupPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 370.0
margin/right = 410.0
margin/bottom = 401.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="value_changed" from="PopupPanel/MusicSlider" to="." method="_on_MusicSlider_value_changed"]

[connection signal="value_changed" from="PopupPanel/GUISoundsSlider" to="." method="_on_GUISoundsSlider_value_changed"]

[connection signal="value_changed" from="PopupPanel/SoundsSlider" to="." method="_on_SoundsSlider_value_changed"]

[connection signal="value_changed" from="PopupPanel/ViewDistanceSlider" to="." method="_on_ViewDistanceSlider_value_changed"]

[connection signal="toggled" from="PopupPanel/ShadowsButton" to="." method="_on_ShadowsButton_toggled"]

[connection signal="pressed" from="PopupPanel/BackButton" to="." method="_on_BackButton_pressed"]


